@@ -344,15 +344,7 @@
 		If you decide to change the name of your Gallery 2 directory (ie, to just "Gallery"), then 
 		you must make the following changes:<br />
 		<div class="instructions">
-			<h3>In html/modules/gallery2/admin/language/lang-xxxxx.php</h3>
-			<p>
-			You will need to update the following line:<br />
-			<font class="code">define("MOD_NAME","gallery2");</font><br />
-			Change "gallery2" to whatever you renamed your Gallery 2 installation directory to.
-			</p>
-		</div>
-		<div class="instructions">
-			<h3>In html/admin/case/case.gallery2.php <font color="red">OR</font> html/modules/gallery2/admin/case.php</h3>
+			<h3>In html/admin/case/case.gallery2.php</h3>
 			<p>
 			You will need to update the following line:<br />
 			<font class="code">$module_name = "gallery2";</font><br />
